# python_mqtt_client

./: .gitignore  docker-compose.yml  mqtt_subscriber_mongo_local.py  publisher.py  publisher_mongo.py  pyproject.toml  readme.md  subscriber.py  subscriber_mongo.py
mosquitto/config/: mosquitto.conf  password.txt
